<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="0dp"
    sothree:umanoShadowHeight="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <!-- <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"/>-->

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/my_location_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:src="@drawable/ic_launcher"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="32dp"
            app:fabSize="normal"
            app:backgroundTint="@color/colorAccent"
            app:elevation="4dp"
            app:borderWidth="0dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/mark_spot_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:src="@drawable/ic_launcher"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            app:fabSize="normal"
            app:backgroundTint="@color/colorAccent"
            app:elevation="4dp"
            app:borderWidth="0dp" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:id="@+id/panel_add_marker"
            android:clickable="true">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/spot_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_description"
                    android:imeActionLabel="@string/action_confirm"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/spot_add_confirm_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_confirm"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:visibility="gone"
            android:id="@+id/panel_view_marker"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_latitude"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/marker_latitude"
                android:layout_width="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/label_longitude"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/marker_longitude"
                android:layout_width="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_spot_address"
                android:layout_marginTop="4dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/marker_spot_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_marginTop="4dp"
                android:marqueeRepeatLimit="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_host"
                android:layout_marginTop="4dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/marker_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:layout_marginTop="4dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/marker_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"/>
            <TextView
                android:id="@+id/cleanedByLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cleanedby"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/marker_cleaned_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="gone"/>


            <Button
                android:id="@+id/spot_cleaned_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_mark_clean"
                android:textStyle="bold" />
            <Button
                android:id="@+id/spot_remove_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_mark_remove"
                android:textStyle="bold" />
        </LinearLayout>


    </FrameLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>